--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.8",
     "@tabler/icons-react": "^2.39.0",
     "@testing-library/react": "^14.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^10.16.4",
     "jest": "^29.7.0",
     "querystring": "^0.2.1",
